Revert "refactor: critical 수정"